--- a/librocksdb-sys/Cargo.toml
+++ b/librocksdb-sys/Cargo.toml
@@ -14,7 +14,7 @@ links = "rocksdb"
 [features]
 default = [ "static" ]
 jemalloc = ["tikv-jemalloc-sys"]
-io-uring = ["pkg-config"]
+io-uring = []
 static = ["libz-sys/static", "bzip2-sys/static"]
 snappy = []
 lz4 = []
@@ -38,4 +38,4 @@ uuid = { version = "0.8", features = ["v4"] }
 cc = { version = "1.0", features = ["parallel"] }
 bindgen = { version = "0.59", default-features = false, features = ["runtime"] }
 glob = "0.3"
-pkg-config = { version = "0.3", optional = true }
+pkg-config = { version = "0.3" }
